<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/hostField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_host"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/portField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_port"
        android:inputType="number" />

    <EditText
        android:id="@+id/userField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/passField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_connect" />

    <Button
        android:id="@+id/addProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_add_profile" />

    <Button
        android:id="@+id/resumeProfilesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_resume_profiles" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

</LinearLayout>
