<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/shareUsernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username" />

    <RadioGroup
        android:id="@+id/sharePermissionGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/sharePermView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_permission_view"
            android:checked="true" />

        <RadioButton
            android:id="@+id/sharePermEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_permission_edit"
            android:layout_marginStart="16dp" />

    </RadioGroup>

    <EditText
        android:id="@+id/shareExpiryField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_expiry_days"
        android:layout_marginTop="8dp" />

</LinearLayout>
